--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,12 +5,12 @@
               <br/><br/>
               <h2>LORENA ORELLANA</h2>
               <br/>
-                <p style="font-size:18px"> Educadora Diferencial egresada de la Universidad Católica de Valparaíso.</p>
-                <p style="font-size:18px"> Amplia experiencia en Chile. </p>
-                <p style="font-size:18px">16 años de experiencia docente en el extranjero - Alemania y Bélgica.</p>
-                <p style="font-size:18px">Idiomas: alemán, neerlandés (nivel avanzado - C1),  inglés (nivel básico) .</p>
-                <p style="font-size:18px">Experiencia herramientas para E-learning: ZOOM, Microsoft Teams, Moodle, SmartSchool.</p>
-                <p style="font-size:18px">Experiencia en todos los niveles del sistema educativo: niños, adolescentes y adultos. </p>
+                <p> Educadora Diferencial titulada de la Pontificia Universidad Católica de Valparaíso.</p>
+                <p> Amplia experiencia en Chile. </p>
+                <p>16 años de experiencia docente en el extranjero - Alemania y Bélgica.</p>
+                <p>Idiomas: alemán, neerlandés (nivel avanzado - C1),  inglés (nivel básico) .</p>
+                <p>Experiencia herramientas para E-learning: ZOOM, Microsoft Teams, Moodle, SmartSchool.</p>
+                <p>Experiencia en todos los niveles del sistema educativo: niños, adolescentes y adultos. </p>
                 <br/>
               </div>
         </div>
