--- a/_includes/ante.html
+++ b/_includes/ante.html
@@ -5,10 +5,10 @@
               <br/><br/>
               <h2>Trayectoria Profesional</h2>
               <br/>
-                <p style="font-size:18px"> Integrante del equipo directivo y psicopedagoga en el colegio Franco-Inglés de Viña del Mar.</p>
-                <p style="font-size:18px"> Profesora de español en el colegio Maria Montessori en Freiberg/Sajonia Alemania.</p>
-                <p style="font-size:18px"> Profesora de español en la TU Bergakademie Freiberg/Sajonia Alemania.</p>
-                                <p style="font-size:18px"> Profesora de español en los institutos de adultos CVO y LBC en Bélgica.</p>
+                <p> Integrante del equipo directivo y psicopedagoga en el colegio Franco-Inglés de Viña del Mar.</p>
+                <p> Profesora de español en el colegio Maria Montessori en Freiberg/Sajonia Alemania.</p>
+                <p> Profesora de español en la TU Bergakademie Freiberg/Sajonia Alemania.</p>
+                                <p> Profesora de español en los institutos de adultos CVO y LBC en Bélgica.</p>
                 <br/>
               </div>
         </div>
