--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,8 +5,8 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<h2>Contacto</h2>
-					<p style="color:black;font-size:24px">  correo electrónico: laop2004@yahoo.es</p>
-					<p style="color:black;font-size:24px">  teléfono: 950547273</p>
+					<p style="color:black">  correo electrónico: laop2004@yahoo.es</p>
+					<p style="color:black">  teléfono / WhatsApp: +56 950547273</p>
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
