--- a/_includes/tarifas.html
+++ b/_includes/tarifas.html
@@ -5,9 +5,9 @@
               <br/><br/>
               <h2>Tarifas</h2>
               <br/>
-                <p style="font-size:18px"> 15 mil pesos por hora de clase.</p>
-                <p style="font-size:18px"> Valores variables de acuerdo a la frecuencia y modalidad programada.</p>
-                <p style="font-size:18px"> Sistema de pago con boleta de servicios.</p>
+                <p> 15 mil pesos por hora de clase.</p>
+                <p> Valores variables de acuerdo a la frecuencia y modalidad programada.</p>
+                <p> Sistema de pago con boleta de servicios.</p>
                 <br/>
               </div>
         </div>
