--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+ 
+<meta name="google-site-verification" content="fFc_OJdIVZUM-LUciT8x3_s3_w2lpNwYzWGRbTbKt30" />
+
 </head>
