--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Contacto</h2>
+					<h2>Contacto - Valdivia</h2>
 					<p style="color:black">  correo electrónico: laop2004@yahoo.es</p>
 					<p style="color:black">  teléfono / WhatsApp: +56 950547273</p>
 				</div>
